--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -3,7 +3,7 @@ on:
     branches: [main]
 jobs:
   npm:
-    runs-on: ubuntu-latest-arm
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
 
