--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/thevangelist/dembrandt.git"
+    "url": "git+https://github.com/dazl-dev/dembrandt.git"
   },
   "bugs": {
     "url": "https://github.com/thevangelist/dembrandt/issues"
