--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "bin": {
-    "dembrandt": "./index.js"
+    "dembrandt": "index.js"
   },
   "files": [
     "index.js",
